--- a/index/index.html
+++ b/index/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+    <div id="animation">
+        <div id="wrapper">
+            <div id="logosadhu">
+                <img src="../image/sadhu1.jpeg" width="75%" height="75%" alt="">
+            </div>
+        </div>
+        <div id="txtdiv">
+            <h3 id="txt">Coding Sadhus</h3>
+        </div>
+    </div>
     <!-- navbar -->
     <nav id="navid">
         <div class="navclass shop">
@@ -58,7 +68,22 @@
     </div>
 
     <div id="content2">
+        <div id="titles">
+            <img src="../image/title.png" height="25px" width="100px" alt="">
+            <h4>THE STORIES</h4>
+        </div>
         <div class = "card-holder">
+            <div id="search">
+                <div >
+                    Search
+                    <i id="pad" class="ri-add-line"></i>
+                </div>
+                <div>
+                 See Films <i id="arrow" class="ri-arrow-right-s-line"></i>
+                 See Stories <i class="ri-arrow-right-s-line"></i>
+                </div>
+            </div>
+            
             <div class="card">
                 <img src="../image/card-img1.jpg" alt="girl image" width="100%" height="auto" class="card-img">
                 <div class="card-text">
@@ -277,7 +302,6 @@
                 <div class="txt">
                     <div class="headb">
                         Making Art in the Middle of Nowhere
-
                     </div>
                     <div class="parab">
                         Exploring a West Texas must-see, firmly planted at the crossroads of Art and Myth.
@@ -342,6 +366,5 @@
         </div>
     </div>
 
-    
 </body>
 </html>
