--- a/index/index.html
+++ b/index/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstart</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <title>Woven</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+     rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@100;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+    <!-- animation started -->
     <div id="animation">
         <div id="wrapper">
             <div id="logosadhu">
@@ -16,8 +20,12 @@
         </div>
         <div id="txtdiv">
             <h3 id="txt">Coding Sadhus</h3>
+            <h5>Presenting</h5>
+            <h4>WOVEN</h4>   
         </div>
-    </div>
+    </div> 
+    <!-- animation ended -->
+
     <!-- navbar -->
     <nav id="navid">
         <div class="navclass shop">
@@ -30,7 +38,7 @@
             <P>Cart</P>
         </div>
     </nav>
-    <!-- navbar ended -->
+    <!-- navbar ended-->
 
     <!-- started banner  -->
     <div id="banner">
@@ -61,9 +69,9 @@
     <!-- started designing witten components -->
     <div id="content1">
         <div id="title">
-            design <i>and</i> travel
+            <b>Design</b> <i>and</i> <b> travel</b> 
         </div>
-        <div id="para">ABOUT US <br>
+        <div id="para"><b> ABOUT US</b><br>
             Woven Magazine celebrates artists, designers, and entrepreneurs while exploring the history of design through travel.</div>
     </div>
 
