--- a/index/index.html
+++ b/index/index.html
@@ -44,7 +44,7 @@
             <span id="function" onclick="openNav()">
                 <i class="ri-menu-line"></i>
             </span>
-            <p>Shop <i id="top" class="ri-arrow-right-s-line"></i></p>
+            <p id="p">Shop <i id="top" class="ri-arrow-right-s-line"></i></p>
         </div>
         <h1 id="head">WOVEN</h1>
         <div class="navclass cart">
@@ -220,7 +220,7 @@
 
 
     <!-- started designing new content4 as cards-->
-    <div id="content4">
+    <div id="content2">
         <div class = "card-holder">
             <div class="card">
                 <img src="../image/card5.jpg" alt="girl image" width="100%" height="auto" class="card-img">
